--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,8 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "utilities";
+
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
